<resources>
    <string name="app_name">Doglet</string>

    <string name="register_welcome">Welcome to Doglet</string>
    <string name="register_message">Please enter an Email and Password to register your an account</string>
    <string name="login_message">Please enter your Email and Password to login in</string>
    <string name="register_instead">New to Doglet? \n Register</string>

    <string name="phone_asterisk">Phone number </string>
    <string name="email_asterisk">Email address </string>
    <string name="display_name_asterisk">Display name </string>
    <string name="password_asterisk">Password </string>
    <string name="passcon_asterisk">Confirm Password </string>
    <string name="friend_search_asterisk">Search for a friend</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="online">online</string>
    <string name="offline">offline</string>

    <string name="google_maps_key">AIzaSyCEovUKpBe0k50ZdtKzHb9mqV2KjA9EHW8</string>
    <string name="SHA_1">6B:A0:EF:08:A8:BC:BA:6C:2F:57:B8:31:51:B9:E1:FA:3D:86:58:73</string>
</resources>