<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.esc.doglet.ui.fragments.LoginFragment">

    <TextView
        android:id="@+id/reg_wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_welcome"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reg_wel_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_message"
        android:textSize="17.5sp"
        android:textColor="#000000"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/reg_scroll"
        app:layout_constraintTop_toBottomOf="@id/reg_wel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.85"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_instead"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reg_scroll"
        app:layout_constraintTop_toBottomOf="@id/reg_wel_two"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/reg_scroll"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_wel_two"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_name"
                android:hint="@string/display_name_asterisk"
                app:errorEnabled="true"
                app:boxBackgroundMode="none"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/display_name_input"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_one"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_name"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_email"
                android:hint="@string/email_asterisk"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/space_one">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/reg_email_input"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_two"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_email"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password"
                android:hint="@string/password_asterisk"
                app:errorEnabled="true"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/space_two">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:focusable="true"
                    android:id="@+id/reg_password_input"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_three"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_password"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password_con"
                android:hint="@string/passcon_asterisk"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                android:visibility="gone"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/space_three">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/reg_password_input_con_edit"
                    android:focusable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/space_four"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_password_con"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/compass_darker"
        android:visibility="gone"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>